# gomoku

./: .gitignore  Dockerfile  README.md  Spacefile  package-lock.json  package.json  pyproject.toml  server.js
backend/notebooks/: mctx_experiments.ipynb
backend/tests/: test_gomoku.py
e2e/src/: app.e2e-spec.ts
frontend/: angular.json  package-lock.json  package.json  server.js
frontend-react/: package-lock.json  package.json
frontend-react/public/: index.html  manifest.json
frontend-react/src/: App.tsx  index.tsx  server.js
frontend-react/src/components/: Board.css  Board.tsx
frontend/src/app/: app.component.spec.ts  app.module.ts
frontend/src/app/board/: board.component.css  board.component.html  board.component.ts
src/app/: app.component.html
src/app/board/: board.component.html  board.component.ts
