[tool.poetry]
name = "gomoku"
version = "0.1.0"
description = "Python packages to run gomoku AI"
authors = ["Kartik Arcot <askarthikkumar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
mctx = "^0.0.3"
numpy = "^1.25.2"
pandas = "^2.0.3"
Flask = "^2.3.2"
ipython = "^8.14.0"
ipykernel = "^6.25.1"
graphviz = "^0.20.1"
mypy = "^1.5.1"
chex = "^0.1.82"
plotly = "^5.18.0"
jax = "^0.4.23"
flax = "^0.7.5"
jaxlib = "0.4.19"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
